--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,4 +109,15 @@
             android:onClick="dropIn"
             android:tag="8"/>
     </GridLayout>
+
+    <Button
+        android:id="@+id/playAgainButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="playAgainEvent"
+        android:text="Play Again?"
+        android:visibility="invisible"
+        tools:layout_editor_absoluteX="166dp"
+        tools:layout_editor_absoluteY="53dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
